--- a/labcodes/lab4/2014210858-刘昊-lab4.md
+++ b/labcodes/lab4/2014210858-刘昊-lab4.md
@@ -3,24 +3,30 @@
 #student number:2014210858
 
 #lab4 report
-## [练习1] 给未被映射的地址映射上物理页（需要编程）
-[实现说明] 首先调用get_pte，根据所访问的线性地址从mm管理的页目录中取得该地址所在也的页表项，若该页表项所在的页表不在内存中则get_pte自动会为该页表分配页。取出页表项后，若对应页不存在且未曾换出过则直接为该页表项分配新页，分配新页使用pgdir_alloc_page函数，若该页换出过，则将其换入，换入使用swap_in函数，换入后需要调用page_insert将换入的页插入到mm管理的页目录中，然后调用swap_map_swappable将该页设置为可换出。
+## [练习1]分配并初始化一个进程控制块（需要编码）
+[实现说明]alloc_proc创建的是一个uninit的进程，所以这里只需要把state设置为PROC_UNINIT，由于实验４只有内核线程，cr3设置为boot_cr3即内核PDT的基址，proc_struct的所有其他属性初始化为空即可，在proc_init函数中对proc_struct的其他属性进行赋值。
       
-[回答问题1]请描述页目录项（Pag Director Entry）和页表（Page Table Entry）中组成部分对ucore实现页替换算法的潜在用处。
-[答：] pte保存页地址或换出时的扇区地址，这是换入换出的一个主要参数。pte中由于页地址和扇区地址低4位都是0,可以利用这4位保存一些标志标志位，如存在位、修改位等，这些为替换算法选择替换页提供了依据。mm中sm_priv保存的是当前工作页链表，可用于fifo算法选择换出页。page中有一个变量pra_vaddr，由于从工作页链表取下一个页时不知道这个页对应的虚拟地址，因为不知道这个页所在的页表在哪，通过这个pra_vaddr和mm的页目录可以反推得到这个页的pte，从而得到可以将页换出的扇区地址保存到这个pte中。
+[回答问题]请说明proc_struct中struct context context和struct trapframe *tf成员变量含义和在本实验中的作用是啥？（提示通过看代码和编程调试可以判断出来）
+[答：] context在进程切换时，用于保存和恢复被中断进程的运行现场。trapframe用于保存同一的进程内核态和用户态切换时，以及内中断时的中断现场。
 
-[回答问题2]如果ucore的缺页服务例程在执行过程中访问内存，出现了页访问异常，请问硬件要做哪些事情？
-[答：]由于页访问异常属于内中断，不可屏蔽，可以在指令的寻址阶段中断当前指令，由于缺页服务例程缺页也会产生缺页终端因此会无限中断下去，此时主机无法工作下去，只能重启，此时硬件需要重置所有寄存器，重启系统。
+##[练习2]为新创建的内核线程分配资源（需要编码）
+[实现说明]1.alloc_proc()分配一个pcb
+2.current proc 设置为parent
+3.分配数个连续个内核页作为内核栈
+4.copy_mm复制或共享mm,copy_thread复制用户栈
+5.get_pid()分配唯一pid
+6.pcb加入到全局pcb链表中
+7.唤醒进程，state设置为runnable
 
-##[练习2] 补充完成基于FIFO的页面替换算法（需要编程）
-[实现说明]_fifo_map_swappable：把page插入mm管理的工作页链表尾部，调用list_add实现链表插入
-_fifo_swap_out_victim：把mm管理的工作页链表头部的page，取下来作为函数输出，再从链表中用list_del删除这个page
     
-[回答问题]如果要在ucore上实现"extended clock页替换算法"请给你的设计方案，现有的swap_manager框架是否足以支持在ucore中实现此算法？如果是，请给你的设计方案。如果不是，请给出你的新的扩展和基此扩展的设计方案。并需要回答如下问题
-需要被换出的页的特征是什么？
-在ucore中如何判断具有这样特征的页？
-何时进行换入和换出操作？
-[答：]不是.
-(1).extended clock算法是对LRU算法的简化，需要被换出的页是最久未使用的页面。最优先换出的是未修改切未访问过的页，其次是修改过且未访问过的页。若没有未访问过的页，则扫描访问过的页时会将访问位置０，然后再从头扫描一边一定能找到上述２中页之一。
-(2).需要在pte或page中加入２个标志位，一个是访问位，一个是修改位。
-(3).换入时访问位初始化为１，修改位初始化为０，将页链接到mm管理的工作页链表中;换出时，扫描mm管理的工作页链表按照clock算法依据修改位和访问位选择换出页，然后把换出页从mm管理的工作页链表中删除。此外换入换出时需要的操作都和fifo一致。
+[回答问题]请说明ucore是否做到给每个新fork的线程一个唯一的id？请说明你的分析和理由。
+[答：]可以，get_pid会分配一个全局唯一的pid,get_pid会遍历全局进程链表，确保分配的pid不和链表内任意一个进程的pid相同
+
+
+##[练习3]阅读代码，理解 proc_run 函数和它调用的函数如何完成进程切换的。（无编码工作）
+[回答问题1]在本实验的执行过程中，创建且运行了几个内核线程？
+[答：]2个，proc_init创建了idleproc和initproc
+
+[回答问题2]语句local_intr_save(intr_flag);....local_intr_restore(intr_flag);在这里有何作用?请说明理由
+[答：]local_intr_save关中断，local_intr_restore开中断。
+这里的作用是在进程切换时需要屏蔽中断，否则保护和恢复寄存器时会造成混乱导致系统崩溃
